# ComputeShadersTutorial

./: .gitignore  CMakeLists.txt  README.md  util.cmake
3DLib/: 3DLib.h  CMakeLists.txt  Mesh.cpp  Mesh.h
AssetLib/: CMakeLists.txt  ObjReader.cpp  ObjReader.cs  ObjReader.h  RLEReader.cpp
ComputeLib/: CMakeLists.txt  Compute.h  ComputeShader.cpp  ComputeShader.h  ComputeWindow.h  GLImage.cpp  ShaderStorageBufferObject.h  SurfaceRenderer.cpp  SurfaceRenderer.h
Project0/: CMakeLists.txt  Project0.cpp
Project1/: CMakeLists.txt  ComputeBlur.cpp  Main.cpp
Project2/: CMakeLists.txt  ConvertBuffer.cpp  ConvertBuffer.h  Project2.cpp
Project3/: CMakeLists.txt  GameOfLife.cpp  Project3.cpp
Project4/: FlockCompute.cpp  FlockCompute.h
Project5/: CameraRayGenerator.cpp  CameraRayGenerator.h
Project6/: SphereRayTracer.h
Project7/: SphereRayTracer.cpp  SphereRayTracer.h
Project8/: SphereRayTracer.cpp  SphereRayTracer.h
Project9/: MeshSSBO.h  ObjRayTracer.cpp  Project08.cpp
Resources/computeshaders/: ClearDepthBuffer.glsl  convert_to_texture.glsl
Resources/computeshaders/flocking/: convert_flock_to_texture.glsl
Resources/computeshaders/gameoflife/: gameoflife.glsl
Resources/computeshaders/imageprocessing/: grayscale.glsl
Resources/computeshaders/raytracer2/: CameraRays.glsl  SphereRayTracer.glsl  VisualizeRays.glsl
Resources/computeshaders/raytracer3/: CameraRays.glsl
cpp/: CMakeLists.txt  README.md  util.cmake
cpp/3DLib/: CMakeLists.txt  Camera.cpp  Camera.h
cpp/AssetLib/: ObjReader.cpp  RLEReader.h
cpp/ComputeLib/: CMakeLists.txt  ComputeShader.cpp  GLImage.h  ShaderStorageBufferObject.h  SurfaceRenderer.h
cpp/HandsOn/HandsOn02/: AddFloats.cpp  AddFloats.h  CMakeLists.txt  Main.cpp
cpp/HandsOn/HandsOn03/: CMakeLists.txt  CameraRayGenerator.cpp
cpp/HandsOn/HandsOn04/: CMakeLists.txt  SphereRayTracer.cpp
cpp/Project0/: CMakeLists.txt  GrayFilter.cpp  GrayFilter.h
cpp/Project1/: CMakeLists.txt  ComputeBlur.h
cpp/Project10/: CMakeLists.txt  ObjRayTracer.cpp
cpp/Project2/: CMakeLists.txt  ConvertBuffer.cpp  Project2.cpp
cpp/Project3/: CMakeLists.txt  GameOfLife.h
cpp/Project4/: CMakeLists.txt  FlockCompute.cpp  Project4.cpp
cpp/Project5/: CMakeLists.txt  Project5.cpp
cpp/Project6/: CMakeLists.txt  Project6.cpp  SphereRayTracer.cpp
cpp/Project7/: CMakeLists.txt  Project7.cpp
cpp/Project8/: CMakeLists.txt
cpp/Project9/: CMakeLists.txt  MeshSSBO.cpp  ObjRayTracer.h  Project09.cpp
cpp/Resources/computeshaders/flocking/: clear.glsl  flocking.glsl
cpp/Resources/computeshaders/handson/: CameraRays.glsl
cpp/Resources/computeshaders/imageprocessing/: grayscale.glsl
cpp/Resources/computeshaders/raytracer1/: VisualizeRays.glsl
cpp/Resources/computeshaders/raytracer3/: ObjRayTracer.glsl  ObjRayTracer2.glsl  RaysToTexture.glsl  SphereRayTracer.glsl
cpp/Resources/shaders/: fullscreen_quad.vert
dotnet/: Camera.cs  ComputeConsole.cs  ComputeShader.cs  ComputeShaderTutorial.csproj  ComputeWindow.cs  GLImage.cs  Program.cs  Project00.cs  Project01.cs  Project02.cs  Project03.cs  Project04.cs  Project05.cs  Project06.cs  Project07.cs  Project08.cs  Project10.cs  Project11.cs  RLEReader.cs  Randomizer.cs  ShaderStorageBufferObject.cs  SurfaceRenderer.cs  dotnet.sln
dotnet/HandsOn/: HandsOn02.cs  HandsOn03.cs  HandsOn04.cs
dotnet/Resources/computeshaders/handson/: SphereRayTracer.glsl  addfloats.glsl
dotnet/Resources/computeshaders/imageprocessing/: blur.glsl  grayscale.glsl
dotnet/Resources/computeshaders/map/: square.glsl
dotnet/Resources/computeshaders/raytracer1/: CameraRays.glsl  SphereRayTracer.glsl  VisualizeRays.glsl
dotnet/Resources/computeshaders/raytracer2/: CameraRays.glsl
dotnet/Resources/computeshaders/raytracer3/: CameraRays.glsl  RaysToTexture.glsl  SphereRayTracer.glsl
dotnet/Resources/computeshaders/reduce/: max.glsl
dotnet/Resources/patterns/: spacefillersynth.rle  syringe.rle
dotnet/Resources/shaders/: fullscreen_quad.frag
